# Faculty

Semester2/OOP/Lab8/: CMakeLists.txt  main.cpp
Semester2/OOP/Lab8/Cos/: cos.cpp  cos.h
Semester2/OOP/Lab8/Domain/: produs.cpp  produs.h
Semester2/OOP/Lab8/Exceptii/: exceptions.h
Semester2/OOP/Lab8/GUI/: CosGUI.h  CosGUIRO.h  ProdusGUI.h
Semester2/OOP/Lab8/ListModel/: ListModel.cpp  ListModel.h
Semester2/OOP/Lab8/Observer/: Observer.cpp  Observer.h
Semester2/OOP/Lab8/Repo/: repo.cpp  repo.h
Semester2/OOP/Lab8/Service/: service.cpp  service.h
Semester2/OOP/Lab8/TableModel/: TableModel.cpp  TableModel.h
Semester2/OOP/Lab8/Teste/: tests.cpp  tests.h
Semester2/OOP/Lab8/Ui/: ui.cpp  ui.h
Semester2/OOP/Lab8/Undo/: undo.h
Semester2/OOP/Lab8/utils/: utils.cpp  utils.h
Semester2/OOP/Lab8/validari/: validari.cpp  validari.h
Semester2/OOP/Partial/: CMakeLists.txt  main.cpp
Semester2/OOP/Partial/Domain/: Elev.cpp  Elev.h
Semester2/OOP/Partial/GUI/: GUI.cpp  GUI.h
Semester2/OOP/Partial/Repo/: RepoFile.cpp  RepoFile.h
Semester2/OOP/Partial/Service/: Service.cpp  Service.h
Semester2/OOP/Partial/Teste/: teste.cpp  teste.h
Semester2/OOP/Partial/Utils/: utils.cpp  utils.h
Semester2/OOP/Practic/: CMakeLists.txt  main.cpp
Semester2/OOP/Practic/Domain/: Parcare.cpp  Parcare.h
Semester2/OOP/Practic/GUI/: GUI.cpp  GUI.h
Semester2/OOP/Practic/MiniGUI/: MiniGUI.cpp  MiniGUI.h
Semester2/OOP/Practic/Observer/: Observer.cpp  Observer.h
Semester2/OOP/Practic/Repo/: RepoFile.cpp  RepoFile.h
Semester2/OOP/Practic/Service/: Service.cpp  Service.h
Semester2/OOP/Practic/TableModel/: TableModel.cpp  TableModel.h
Semester2/OOP/Practic/Teste/: teste.cpp  teste.h
Semester2/OOP/Practice/Masini/: CMakeLists.txt  main.cpp
Semester2/OOP/Practice/Masini/Domain/: Masina.cpp  Masina.h
Semester2/OOP/Practice/Masini/GUI/: MasinaGui.cpp  MasinaGui.h
Semester2/OOP/Practice/Masini/Repo/: RepoFile.cpp  RepoFile.h
Semester2/OOP/Practice/Masini/Service/: Service.cpp  Service.h
Semester2/OOP/Practice/Masini/TableModel/: TabelModel.cpp  TabelModel.h
Semester2/OOP/Practice/Masini/Teste/: teste.cpp  teste.h
Semester2/OOP/Practice/Melodii1/: CMakeLists.txt  main.cpp
Semester2/OOP/Practice/Melodii1/Domain/: Melodie.cpp  Melodie.h
Semester2/OOP/Practice/Melodii1/GUI/: MelodieGui.cpp  MelodieGui.h
Semester2/OOP/Practice/Melodii1/Repo/: RepoFile.cpp  RepoFile.h
Semester2/OOP/Practice/Melodii1/Service/: Service.cpp  Service.h
Semester2/OOP/Practice/Melodii1/TabelModel/: TabelModel.cpp  TabelModel.h
Semester2/OOP/Practice/Melodii1/Teste/: teste.cpp  teste.h
Semester2/OOP/Practice/Practic/: CMakeLists.txt  main.cpp
Semester2/OOP/Practice/Produse/: CMakeLists.txt  main.cpp
Semester2/OOP/Practice/Produse/Domain/: Produs.cpp  Produs.h
Semester2/OOP/Practice/Produse/Exception/: Exception.cpp  Exception.h
Semester2/OOP/Practice/Produse/GUI/: ProdusGui.cpp  ProdusGui.h
Semester2/OOP/Practice/Produse/MiniGui/: MiniGui.cpp  MiniGui.h
Semester2/OOP/Practice/Produse/Observer/: Observable.h  Observer.h
Semester2/OOP/Practice/Produse/Repo/: RepoFile.cpp  RepoFile.h
Semester2/OOP/Practice/Produse/Service/: Service.cpp  Service.h
Semester2/OOP/Practice/Produse/TabelModel/: TableModel.cpp  TableModel.h
Semester2/OOP/Practice/Produse/Teste/: teste.cpp  teste.h
Semester2/OOP/Practice/Produse/Validari/: validare.cpp  validare.h
Semester2/OOP/Practice/Tractoare/: CMakeLists.txt  Exception.h  main.cpp
Semester2/OOP/Practice/Tractoare/Domain/: Tractor.cpp  Tractor.h
Semester2/OOP/Practice/Tractoare/GUI/: TractorGui.cpp  TractorGui.h
Semester2/OOP/Practice/Tractoare/Repo/: RepoFile.cpp  RepoFile.h
Semester2/OOP/Practice/Tractoare/Service/: Service.cpp  Service.h
Semester2/OOP/Practice/Tractoare/TableModel/: TableModel.cpp  TableModel.h
Semester2/OOP/Practice/Tractoare/Teste/: teste.cpp  teste.h
Semester2/OOP/Test/test1/: CMakeLists.txt  main.cpp
Semester2/OOP/Test/test1/Domain/: PlacaDeBaza.cpp  PlacaDeBaza.h  Procesor.cpp  Procesor.h
Semester2/OOP/Test/test1/GUI/: GUI.cpp  GUI.h
Semester2/OOP/Test/test1/Repo/: PlacaInFileRepo.cpp  PlacaInFileRepo.h  ProcesorInFileRepo.cpp  ProcesorInFileRepo.h
Semester2/OOP/Test/test1/Service/: PlacaService.cpp  PlacaService.h  ProcesorService.cpp  ProcesorService.h
Semester2/OOP/Test/test1/Teste/: teste.cpp  teste.h
Semester2/OOP/Test/test2/: CMakeLists.txt  main.cpp
Semester2/OOP/Test/test2/Domain/: Apartament.cpp  Apartament.h
Semester2/OOP/Test/test2/GUI/: GUI.cpp  GUI.h
Semester2/OOP/Test/test2/Repo/: RepoFile.cpp  RepoFile.h
Semester2/OOP/Test/test2/Service/: Service.cpp  Service.h
Semester2/OOP/Test/test2/Teste/: teste.cpp  teste.h
Semester2/OOP/test_qt/: CMakeLists.txt  main.cpp
Semester2/SD/: ex_lab1.mw  (+11 more)
Semester2/SDA/lab1/: CMakeLists.txt  Complexitati_lab1.pages
Semester2/SDA/lab1/TAD Colectie/Proiect C++/: App.cpp
Semester2/SDA/lab2/: CMakeLists.txt  main.cpp
Semester2/SDA/lab2/TAD Lista Ordonata/Proiect C++/: Iterator.cpp  Iterator.h  LO.cpp  LO.h
Semester2/SDA/lab2/TAD Lista Ordonata/Teste/: TestExtins.cpp  TestExtins.h  TestScurt.cpp  TestScurt.h
Semester2/SDA/lab3/: CMakeLists.txt  main.cpp
Semester2/SDA/lab3/TAD Multime/Proiect_C++/: IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h
Semester2/SDA/lab3/TAD Multime/Teste/: TestExtins.cpp  TestExtins.h  TestScurt.cpp  TestScurt.h
Semester2/SDA/lab4/: CMakeLists.txt  main.cpp
Semester2/SDA/lab4/TAD Multi-dictionar/Proiect c++/: IteratorMD.cpp  IteratorMD.h  MD.cpp  MD.h
Semester5/PPD/class/lab10/: CMakeLists.txt  main.cpp
Semester5/PPD/ex/colectiva/: CMakeLists.txt  main  main.cpp
Semester5/PPD/ex/sincron/: CMakeLists.txt  main  main.cpp
Semester5/PPD/ex_practic/Subiect1_Vladiela/: CMakeLists.txt  cerinta  main  main.cpp  output.txt
Semester5/PPD/ex_practic/Subiect2_Matei/: CMakeLists.txt  main.cpp
Semester5/PPD/ex_practic/Subiect3_Bogdan/: CMakeLists.txt  main  main.cpp  numbers.txt  result.txt
Semester5/PPD/ex_practic/gr231_2/: CMakeLists.txt  cerinta  inputA  main  main.cpp
(+1774 files in other folders)
