cmake_minimum_required(VERSION 3.27)
project(lab1)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab1
        "TAD Colectie/Proiect C++/App.cpp"
        "TAD Colectie/Proiect C++/Colectie/Colectie.h"
        "TAD Colectie/Proiect C++/Colectie/Colectie.cpp"
        "TAD Colectie/Proiect C++/Colectie/IteratorColectie.cpp"
        "TAD Colectie/Proiect C++/Teste/TestExtins.cpp"
        "TAD Colectie/Proiect C++/Teste/TestScurt.h"
        "TAD Colectie/Proiect C++/Teste/TestScurt.cpp")
