cmake_minimum_required(VERSION 3.27)
project(lab2)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab2 main.cpp
        "TAD Lista Ordonata/Proiect C++/LO.cpp"
        "TAD Lista Ordonata/Proiect C++/Iterator.cpp"
        "TAD Lista Ordonata/Teste/TestExtins.cpp"
        "TAD Lista Ordonata/Teste/TestScurt.cpp"
        "TAD Lista Ordonata/Teste/TestExtins.h"
)
